--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lab: Event Listeners With JavaScript</title>
-  <link rel="stylesheet" href="styles.css">
+  <script src="index.js" defer></script>
 </head>
 <body>
   <h1>Lab: Event Listeners With JavaScript</h1>
@@ -12,6 +12,29 @@
   <p id="keyPressDisplay">Press any key...</p>
   <input type="text" id="textInput" placeholder="Type something...">
   <p id="textInputDisplay">Your input will be displayed here.</p>
-  <script src="script.js"></script>
+  <button id="hoverer">Click me :D</button>
+  <div id="imgDiv"></div>
+
+  <form action="mailto:jackson.klingaman22+formSubmits@gmail.com" method="post" enctype="text/plain">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="Name" required><br><br>
+
+    <label for="favColor">Favorite Color:</label><br>
+    <input type="text" id="favColor" name="Favorite Color" required><br><br>
+
+    <label for="favFood">Favorite Food:</label><br>
+    <input type="text" id="favFood" name="Favorite Food" required><br><br>
+
+    <label for="hobby">Hobbies:</label><br>
+    <input type="text" id="hobby" name="Hobbies" required><br><br>
+
+    <label for="other">Other:</label><br>
+    <textarea name="Other" id="other"></textarea><br><br>  
+
+    <input type="submit" value="submit">
+
+  </form>
+  <button class="btn" id="alert">Alert me!</button>
+  <button class="btn" id="log">Console Log something</button>
 </body>
 </html>
