--- a/index.html
+++ b/index.html
@@ -36,5 +36,12 @@
   </form>
   <button class="btn" id="alert">Alert me!</button>
   <button class="btn" id="log">Console Log something</button>
+  <form id="form2">
+    <input type="text" id="toDo" placeholder='New To Do'>
+    <input type="submit">
+  </form>
+  <div id="toDoContainer">
+
+  </div>
 </body>
 </html>
